06-argocd/airgap-helm-repo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airgap-helm-repo
  namespace: argocd
  labels:
    app: airgap-helm-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airgap-helm-repo
  template:
    metadata:
      labels:
        app: airgap-helm-repo
    spec:
      containers:
        - name: chart-server
          image: quay.io/argoproj/argocd:v3.5.3
          imagePullPolicy: IfNotPresent
          command:
            - perl
            - -e
            - |
              [...]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: charts-volume
              mountPath: /www
      volumes:
        - name: charts-volume
          secret:
            secretName: airgap-helm-charts
---
apiVersion: v1
kind: Service
metadata:
  name: airgap-helm-repo
  namespace: argocd
  labels:
    app: airgap-helm-repo
spec:
  selector:
    app: airgap-helm-repo
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
